<resources>
    <string name="app_name">Hisaab Analyser</string>
    <string name="hisaab">Hisaab</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="buy_item">Add item</string>
    <string name="balance_enquiry">Balance enquiry</string>
    <string name="add_money">Add money</string>
    <string name="channel_name1">channel1</string>
    <string name="channel_description">it is for alerting users</string>
    <string name="display_information">Display Information</string>
    <string name="item">item</string>
    <string name="enter_price">Enter price :</string>
    <string name="price">price</string>
    <string name="commit">Proceed</string>
    <string name="enter_item">Enter item :</string>
    <string name="month">month : </string>
    <string name="display">Show</string>
    <string name="year">year :   </string>
    <string name="add">Add</string>
    <string name="total_balance">Total balance :</string>
    <string name="clear">clear</string>
    <string name="available_bal">Available Bal :</string>
    <string name="daily_investment_record">Daily Investment Record</string>
    <string name="daily_investment_analysis">Daily Investment Analysis</string>
    <string name="monthly_spend">Monthly spend</string>
    <string name="total_money_spend">money spend :</string>
    <string name="total_money_received">money received :</string>
    compileSdk 34

    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="display_data">no data</string>
    <string name="total_money_available">Total money available :</string>
    <string name="guide">guide</string>
    <string name="about2">About</string>
    <string name="_3_user_can_add_money_when_he_she_receive_from_any_source">3. Users can add money which he/she has received or earn from any source.</string>
    <string name="_2_user_can_check_what_item_he_she_had_brought_at_what_price_on_which_date_even_after_10_year">2. Users can view their purchases, prices, and dates, even after 10 years.</string>
    <string name="_4_user_can_check_their_monthly_spend_receive_total_money_he_she_spent_in_a_particular_month_of_a_particular_year">4. Users can see their spending and total amount spent for any month and year.</string>
    <string name="_1_store_total_available_balance">1. Store the total available balance.</string>
    <string name="_5_if_user_buys_an_item_and_add_here_in_the_app_then_his_available_balance_will_automatically_updated">5. If a user adds an item to the app, their balance updates automatically.</string>
    <string name="how_to_use">How to use</string>
    <string name="what_t_new">What\'t new</string>
    <string name="_2_once_user_registers_successfully_he_she_can_login">2. Once user registerd successfully ,he/she can opt for login</string>
    <string name="_3_there_will_be_4_option">3. There will be 4 option</string>
    <string name="add_item">- Add item</string>
    <string name="_13_if_you_want_to_see_how_much_you_spend_in_a_month_you_can_check_in_the_monthly_spend_page">13.To view your total spending for the month, check the monthly spending page</string>
    <string name="_12_to_see_your_daily_investment_record_go_to_display_information_set_the_month_and_year_collectly_and_press_show_button_it_will_show_all_your_record_of_that_respective_month">12. To view your daily investment record, go to the \'Display Information\' section, select the correct month and year, and press the \'Show\' button. This will display all your records for the selected month</string>
    <string name="_1_user_have_to_login_first_if_he_she_doesn_t_has_an_account_can_register_by_clicking_on_don_t_have_account_option_below_in_the_login_page">1. Users must log in first. If you don\'t have an account, you can register by clicking the \'Don\'t have an account?\' option below the login form.</string>
    <string name="balance_enquiry2">- Balance Enquiry</string>
    <string name="monthly_spend2">- Monthly spend</string>
    <string name="_4_firstly_the_user_has_0_balance_in_his_her_account_so_he_she_can_t_buy_or_add_any_item_here_in_this_app_it_will_show_insufficient_balance">4. Initially, the user has 0 balance in their account, so they cannot buy or add any items in the app; it will show an \'insufficient balance\' message</string>
    <string name="_6_go_to_balance_enquiry_and_add_100_or_any_if_you_really_has_with_you_in_real">6. Go to the balance enquiry section and add 100 or any amount if you truly have it available in real life</string>
    <string name="_8_in_monthly_spend_set_the_month_and_year_collectly_and_press_show_it_will_show_how_much_money_you_have_received_and_spend_in_that_respective_month">8. In the monthly spend section, set the month and year correctly, then press \'Show.\' It will display the total amount of money you have received and spent for that respective month.</string>
    <string name="_7_your_balance_is_updated_you_can_now_check_in_monthly_spend">7. Your balance is updated , you can now check in monthly spend</string>
    <string name="_10_to_add_item_go_to_add_item_page_enter_what_item_you_bought_and_at_what_price_then_set_the_month_and_year_collectly_and_press_commit">10.To add item - Go to add item page, enter what item you bought and at what price, then set the month and year correctly and press commit</string>
    <string name="_5_so_user_has_to_add_some_balance_only_if_he_has_with_his_in_real_if_user_has_100_ruppee_he_should_add_100_here_by_going_to_the_balance_enquiry_page">5. so user has to add some balance ,only if he/she has with him/her in real, if user has 100 rupee he/she should add 100 here by going to the balance enquiry page</string>
    <string name="use_it_happily">Use it happily</string>
    <string name="display_information2">- Display information</string>
    <string name="_9_now_according_to_the_process_of_adding_100_it_will_show_rs_100_in_received_option_and_0_in_spend_as_you_haven_t_buy_or_add_any_item_yet">9. Now according to the process of adding 100 , it will show Rs.100 in received option and 0 in spend as you haven\'t buy or add any item yet.</string>
    <string name="about">about</string>
    <string name="Github">Github - </string>
    <string name="college">College - </string>
    <string name="contact">Contact</string>
    <string name="north_eastern_regional_institute_of_science_and_technology">North Eastern Regional Institute Of Science And Technology</string>
    <string name="nerist">NERIST</string>
    <string name="https_github_com_jugalcody">https://github.com/Jugalcody</string>
    <string name="linkedin">Linkedin -</string>
    <string name="https_www_linkedin_com_in_jugal_kishore_das_323443234_originalsubdomain_in">https://www.linkedin.com/in/jugal-kishore-das-323443234/?originalSubdomain=in</string>
    <string name="logout">Logout</string>
    <string name="back_button_of_register_page">back button of register page</string>
    <string name="button_to_sign_up_by_user">Button to sign up by user</string>
    <string name="back_button_for_forgot">Back button for forgot</string>
    <string name="back_button_to_move_back_to_login_activity_from_register_page">Back button to move back to login activity from register page</string>
    <string name="accessibility_service_description">Using the accessibility service to detect if user has recently visited payment app so that hisaab analyser app can open next to it to allow user add their expenses immediately</string>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
    </string-array>
</resources>