<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/violet">

            <TextView
                android:id="@+id/hisaab"
                android:layout_width="348dp"
                android:layout_height="185dp"
                android:layout_gravity="center"
                android:background="@color/violet"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/hisaab"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginTop="100dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:paddingLeft="4dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/border"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:paddingLeft="4dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
           />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="64dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="17sp"
               />

            <TextView
                android:id="@+id/sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:onClick="register"
                android:text="@string/don_t_have_account"
                android:textColor="@color/purple_500"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>