<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/violet"
    tools:context=".first">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_analysis"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="20dp"

        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@color/violet"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/violet"

            android:orientation="vertical">

            <TextView
                android:id="@+id/monav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@color/violet"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/total_money_available"
                />

            <TextView
                android:id="@+id/monrec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/violet"
                android:textColor="@color/white"
                android:text="@string/total_money_received"
                />

            <TextView
                android:id="@+id/mons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@color/violet"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/total_money_spend"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/violet">

                <Spinner
                    android:id="@+id/spinm2"
                    android:backgroundTint="@color/purple_500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:background="@drawable/border3"
                    android:padding="15dp" />
                <Spinner
                    android:id="@+id/spinm3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:backgroundTint="@color/purple_500"
                    android:background="@drawable/border4"
                    android:padding="15dp" />

            </LinearLayout>

            <Button
                android:id="@+id/mondb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="64dp"
                android:text="@string/display"
                android:textColor="@color/black"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textSize="17sp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>